* Add support of _buttons
* Add support of fields.Time

Version 2.2.0 - 2011-10-25
* Bug fixes (see mercurial logs for details)
* Change license to LGPL-3
* Drop support of Python 2.5

Version 2.0.0 - 2011-04-28
* Bug fixes (see mercurial logs for details)
* Manage default values of trytond configuration

Version 1.8.0 - 2010-12-24
* Initial release