@@ -1,3 +1,4 @@
+* Use loading attribute
 * Add support of _buttons
 * Add support of fields.Time
 
